controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: hdac
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    run: hdac
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: hdac
  name: hdac
spec:
  containers:
  - image: 947342103870.dkr.ecr.eu-west-1.amazonaws.com/bmutziu/hello-dynamic-admission-control:0.0.1
    name: hdac
    ports:
    - containerPort: 8443
    imagePullPolicy: Always
    livenessProbe:
      httpGet:
        port: 8443
        path: /hc
        scheme: HTTPS
    readinessProbe:
      httpGet:
        port: 8443
        path: /hc
        scheme: HTTPS
    resources:
      limits:
        cpu: 100m
        memory: 128Mi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      runAsNonRoot: true
      readOnlyRootFilesystem: true
