admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "pod-policy.bmutziu.me"
webhooks:
- name: "pod-policy.bmutziu.me"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "hdac"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVWFBOVEJ0NzZtZS9uOVU4UnY3WGZZdzRycVg0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tZbTExZEhwcGRTMWpZVEFlRncweU1UQXhNVEl3T0RNMk1qUmFGdzB5TWpBeApNVEl3T0RNMk1qUmFNQlV4RXpBUkJnTlZCQU1NQ21KdGRYUjZhWFV0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFERWY1TjM0Vkx0R0pVVjZxZzVHbHdNMSt6bk9LVG1EejhVcGF0RjBlNjUKN2ExdWtuamZwV204WHZWZHNMYXgwZFRFbVhWWEJNUU1QbWhKNG1qRkZ2YzMwaGpidk0wSUFBaXFZQ2VWYWFVZApRVlA4ZFdmTXIzT [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
